// ====== Core Entities ======

// Represents individual educational institutions
Table customers {
  customer_id uuid [pk]
  name varchar [unique, not null]
  created_at timestamp
  updated_at timestamp
}

// Represents individual educational institutions
Table schools {
  school_id uuid [pk] // Internal unique identifier for the school
  customer_id uuid [ref: > customers.customer_id]
  name varchar [not null]
  school_number int // E.g. PowerSchool School Number
  city varchar
  state varchar
  country varchar
  address varchar
  phone varchar
  principal_name varchar
  principal_email varchar
  assistant_principal_name varchar
  assistant_principal_email varchar
  external_source varchar
  external_key varchar
  external_id int
  external_key_hash varchar [unique, not null]
  external_name varchar
  created_at timestamp
  updated_at timestamp
}

// Defines academic school years, globally applicable across schools
Table years {
  year_id uuid [pk]
  name varchar [unique, not null] // Human-readable name for the school year ("2024-2025")
  start_year int [not null]
  end_year int [not null]
  nominal_start_date date // Approximate start date for the academic year
  nominal_end_date date // Approximate end date for the academic year
  is_current boolean [not null, default: false] // Flag indicating if this is the currently active school year
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// Represents specific academic terms (semesters, quarters) within a school year for a particular school
Table terms {
  term_id uuid [pk]
  school_id uuid [ref: > schools.school_id, not null]
  year_id uuid [ref: > years.year_id, not null]
  name varchar [not null] // "Fall 2024", "Semester 1 2024-2025", "Q1"
  abbreviation varchar // "Q1", "S1"
  start_date date [not null]
  end_date date [not null]
  term_type varchar // 'Semester', 'Quarter', 'Trimester', 'Marking Period', 'Full Year'
  is_current boolean [not null, default: false] // Flag indicating if this is the currently active term for its school
  external_term_id varchar // PowerSchool's termid or equivalent
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table users {
  user_id uuid [pk]
  auth_user_id uuid [not null]
  first_name varchar [not null]
  middle_name varchar
  last_name varchar [not null]
  email varchar [not null]
  image_url varchar
}

// Information about individual students
Table students {
  student_id uuid [pk]
  first_name varchar [not null]
  middle_name varchar
  last_name varchar [not null]
  full_name varchar [not null]
  email varchar [not null]
  phone varchar
  grade_level int [not null]
  gender varchar
  date_of_birth date
  created_at timestamp [not null]
  updated_at timestamp [not null]
  external_source varchar
  external_key varchar
  external_id int
  external_key_hash varchar [not null]
  external_name varchar
  graduation_year int
  enrollment_status varchar [not null]
  homeroom_name varchar
}

// Definitions of courses offered
Table courses {
  course_id uuid [pk]
  name varchar [not null]
  course_number varchar [not null] // "ENG101"
  state_course_number varchar
  credit_hours int [not null]
  school_id uuid [ref: > schools.school_id, not null]
  description text
  subject_area varchar // "English", "Math"
  external_course_id varchar // Course identifier from the source SIS
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// Instances of courses being taught in a specific term (classes)
Table course_sections {
  section_id uuid [pk]
  course_id uuid [ref: > courses.course_id, not null]
  term_id uuid [ref: > terms.term_id, not null]
  school_id uuid [ref: > schools.school_id, not null]
  section_identifier varchar [not null] // Human-readable or system identifier for the section (period-day-course.section)
  room varchar
  teacher_id uuid [ref: > teachers.teacher_id]
  external_section_id varchar [not null] // Section identifier from the source SIS
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table teachers {
  teacher_id uuid [pk]
  first_name varchar
  last_name varchar
  email varchar
  school_id uuid [ref: > schools.school_id]
  created_at timestamp
  updated_at timestamp
}

// Consolidated student grades from various sources
Table student_grades {
  grade_id uuid [pk]
  student_id uuid [ref: > students.student_id, not null] // Link to the student receiving the grade
  section_id uuid [ref: > course_sections.section_id, not null] // Link to the specific class section for which the grade is given
  term_id uuid [ref: > terms.term_id, not null] // Link to the academic term in which the grade was earned
  grade_letter varchar
  grade_code varchar
  grade_percent decimal // 92.50. Allowing up to 999.99 or 100.00 if that's the max
  grade_points decimal // 4.000
  credit_hours_earned decimal
  credit_type varchar // Taken from StoredGrades.credit_type
  comment text
  student_grade_level_at_time varchar // The grade level of the student at the time the course related to this grade was taken
  grade_status varchar [not null] // Indicates if the grade is final, in-progress, etc
  source_api varchar [not null] // 'StoredGrades', 'PGFinalGrades'
  source_updated_date date [not null] // Date from the source system (datestored or lastgradeupdate)
  data_source_system varchar [not null, default: 'PowerSchool']
  external_grade_id varchar // The primary key of the grade record from the source SIS
  last_synchronized_at timestamp [not null] // Timestamp of when this record was last updated by the ETL process
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ====== Relationship Entities ======

// A user may belong to one or more schools
Table user_school_memberships {
  user_id uuid [pk, ref: > users.user_id]
  school_id uuid [ref: > schools.school_id, not null]
  role varchar [not null] // e.g. admin, teacher, student
  created_at timestamp
  updated_at timestamp
}

Table school_student_link {
  student_id uuid [not null]
  school_id uuid [not null]
  start_date date
  end_date date
  created_at timestamp
  updated_at timestamp
}

// ====== Relationship Entities ======

Table section_enrollments {
  section_enrollment_id uuid [pk]
  student_id uuid [ref: > students.student_id]
  section_id uuid [ref: > course_sections.section_id]
  term_id uuid [ref: > terms.term_id]
  start_date date
  end_date date
  absences int
  tardies int
  created_at timestamp
  updated_at timestamp
}

Table grades {
  grade_id uuid [pk]
  section_enrollment_id uuid [ref: > section_enrollments.section_enrollment_id]
  grade_type varchar // e.g. final, midterm
  grade_value decimal // e.g. 85.5
  recorded_at timestamp
}

// ====== App Users ======

Table users {
  user_id uuid [pk]
  email varchar
  first_name varchar
  last_name varchar
  role varchar // e.g. admin, counselor
  created_at timestamp
  updated_at timestamp
}

// A user may belong to one or more schools or districts
Table user_school_memberships {
  user_id uuid [ref: > users.user_id]
  school_id uuid [ref: > schools.school_id]
  role varchar // e.g. admin, teacher, student
  created_at timestamp
  updated_at timestamp
}